moving to java 16
and adding intellij suport